# secreport

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEEP_AUDIT.md  README.md  clippy.json  fix.py  fix_all.py  fix_missing.py  patch_secreport.py
.github/workflows/: ci.yml
examples/: basic.rs  custom_reportable.rs  jsonl_export.rs
src/: adversarial_tests.rs  format.rs  generated_tests.rs  lib.rs  models.rs  render.rs  tests.rs
src/render/: json.rs  markdown.rs  summary.rs
