[package]
exclude = ["target/"]
name = "secreport"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Corum Collective LLC <engineering@corumcollective.com>"]
repository = "https://github.com/santhsecurity/secreport"
description = "Output formatters for security findings — JSON, JSONL, SARIF, Markdown, Text"
readme = "README.md"
keywords = ["security", "sarif", "output", "reporting", "jsonl", "cli"]
categories = ["development-tools"]

[dependencies]
secfinding = { version = "0.2.0", path = "../secfinding" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
