[package]
exclude = ["target/"]
name = "secreport"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Corum Collective LLC <engineering@corumcollective.com>"]
repository = "https://github.com/santhsecurity/secreport"
description = "Output formatters for security findings — JSON, JSONL, SARIF, Markdown, Text"
readme = "README.md"
keywords = ["security", "sarif", "reporting", "jsonl", "findings"]
categories = ["development-tools"]

[dependencies]
secfinding = ">=0.1.1, <0.3.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
